Changed banner url with google photo image

--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 .banner
 {
 	/*background-color: #341F48;*/
-	background-image: url('/images/banner_image.jpg');
+	background-image: url('https://lh3.googleusercontent.com/ptiX-bvasngAj9UGOok92zwBgF7mkR5vEVC1HbAbV0ml5yoV6ZKWNZhqgFmy91TWZAul7ojyKB0T6CzylDYAnQMSrgHJXmWd98lSjRnPXEhl8jnCxMObXfzCGaC_8Nw4-J1bj_8yImYReiMfWKFvqB48QDwJOPlnlxlFA8PCPXolFaHSPtWLNHS-l3Ffzzf3cLqCLteL0tHin2uLblMYzJX1wp3punl4Jgaj7xgv6Ia_d6sXRP_yLwfhtU_eCgXrb9E2jUurJLLV-wzgYtvfzP8GUsbByWtDy1dNaypWYfpONY4xJIzTHkYfd34YWLfqjI6_R-IxQmBbr6C8BwWk-kVRbc4GENzWf0wGdXXbqN8kf4J-G_klpEHJwBeFtK_ef-UbKQPyZPg5a1fShixaXkswmgRyGdz9qtQzrRgcaV59AvxwhjodF2Y2UkqXg1uuTsfPchi9hA2BSsccDlP0nMukej6OUaw8ndA3CNh8ji3QlQUUwFP1cGHimWVWKTFNCSnL-zetXRqw0oJ4DEBNeSQjpEgc4xztXhVUfGU9xwOApqgl7c7dF0HLrdbs7oFL4Yk=w1646-h925-no');
 
 }
 
